Extensive work on the object model and api calls.
Add object for atk service instance. Split service into
ServiceInstance and ServiceType. Add relevant api calls
and object methods (without adding swagger schema -
appropriate NotImplementedError exceptions are raised).
Move get_admin_client to api_client, make get_admin_user a
classmethod of User (renamed to get_admin).
Fix imports.
